# ews-qt

./: CMakeLists.txt  config.h.cmake  readme.txt
src/: CMakeLists.txt  ESoapElement.cpp  ESoapElement.h  ESoapMessage.cpp  ESoapMessage.h  ESoapNamespaces.cpp  ESoapNamespaces.h  EwsAutoDiscover.cpp  EwsAutoDiscover.h  EwsAutoDiscoverReply.cpp  EwsAutoDiscoverReply.h  EwsConnection.cpp  EwsConnection.h  EwsConnection_p.h  EwsEffectiveRights.cpp  EwsEffectiveRights.h  EwsEffectiveRights_p.h  EwsEmailAddress.cpp  EwsEmailAddress.h  EwsFolder.cpp  EwsFolder.h  EwsFolder_p.h  EwsMessage.cpp  EwsMessage.h  EwsPermission.cpp  EwsPermission.h  EwsPermission_p.h  EwsReply.cpp  EwsReply.h  EwsReply_p.h  EwsRequest.cpp  EwsRequest.h  EwsSyncFolderHierarchyReply.cpp  EwsSyncFolderHierarchyReply.h  EwsSyncFolderHierarchyReply_p.h  EwsSyncFolderItemsReply.cpp  EwsSyncFolderItemsReply.h  EwsSyncFolderItemsReply_p.h  Services.wsdl  autodiscover.cpp  (+48 more)
src/modules/: CMakeLists.txt  ewsqt5-config.cmake.in
